# L1DeepMET

./: .gitignore  CLAUDE.md  LICENSE  README.md  data  dvc.yaml  environment.yaml  params.yaml  pyproject.toml
.dvc/: config
docs/: data-preprocessing.md  dvc-workflow.md  training-evaluation.md
notebooks/: lipschitz_check.ipynb  preprocess_config.yaml  preprocessing.ipynb
scripts/: evaluate.py  preprocess.py  train.py
src/l1deepmet/: config.py  constants.py  plotting.py  train.py  utils.py
src/l1deepmet/data/: config.py  loader.py  preprocessing.py  preprocessing_legacy.py
src/l1deepmet/losses/: corrected.py
src/l1deepmet/metrics/: binned.py
src/l1deepmet/models/: base.py  dense.py  embedding.py  factory.py  mixer.py  output_head.py
tests/: base.py  conftest.py
tests/integration/: test_preprocessing_dataflow.py  test_training_pipeline.py
tests/unit/: test_plotting.py  test_train.py
tests/unit/data/: test_preprocessing.py
tests/unit/losses/: test_losses.py
tests/unit/models/: test_dense.py
